--- a/Rml25Client/Rml25Client.csproj
+++ b/Rml25Client/Rml25Client.csproj
@@ -142,9 +142,11 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Constants.cs" />
+    <Compile Include="Credentials.cs" />
     <Compile Include="CredentialsRequestWindow.xaml.cs">
       <DependentUpon>CredentialsRequestWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="CredentialsSaveLoader.cs" />
     <Compile Include="DeviceData.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="MainWindow.xaml.cs">
@@ -153,7 +155,6 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FakeModel.cs" />
     <Compile Include="Model.cs" />
     <Compile Include="ViewCommand.cs" />
     <Compile Include="ViewModel.cs" />
