Credentials save/load rework

--- a/Rml25Client/Rml25Client.csproj
+++ b/Rml25Client/Rml25Client.csproj
@@ -125,6 +125,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="XmlLoaderSaver.cs" />
     <Page Include="App.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
