--- a/Rml25Client/Rml25Client.csproj
+++ b/Rml25Client/Rml25Client.csproj
@@ -125,7 +125,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="XmlLoaderSaver.cs" />
+    <Compile Include="Utils\AutoUpdater.cs" />
+    <Compile Include="Interface\UpdateRateToStringConverter.cs" />
+    <Compile Include="Interface\UpdateScopeToStringConverter.cs" />
+    <Compile Include="Enums\UpdateRate.cs" />
+    <Compile Include="Enums\UpdateScope.cs" />
+    <Compile Include="Utils\XmlLoaderSaver.cs" />
+    <Compile Include="ViewModel_commands.cs" />
     <Page Include="App.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -142,14 +148,14 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Constants.cs" />
-    <Compile Include="Credentials.cs" />
+    <Compile Include="Utils\Constants.cs" />
+    <Compile Include="Entities\Credentials.cs" />
     <Compile Include="CredentialsRequestWindow.xaml.cs">
       <DependentUpon>CredentialsRequestWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="CredentialsSaveLoader.cs" />
-    <Compile Include="DeviceData.cs" />
-    <Compile Include="Logger.cs" />
+    <Compile Include="Utils\CredentialsSaveLoader.cs" />
+    <Compile Include="Entities\DeviceData.cs" />
+    <Compile Include="Utils\Logger.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -157,7 +163,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Model.cs" />
-    <Compile Include="ViewCommand.cs" />
+    <Compile Include="Utils\ViewCommand.cs" />
     <Compile Include="ViewModel.cs" />
     <Compile Include="ViewModel_bindings.cs" />
     <Compile Include="Program.cs" />
@@ -190,5 +196,6 @@
   <ItemGroup>
     <Resource Include="icon.ico" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
